fixed alignement of emoticons labels

--- a/htdocs/helpim.css
+++ b/htdocs/helpim.css
@@ -54,6 +54,7 @@
 
 .emoticonsExpandBtn {
     cursor: pointer;
+    vertical-align: top;
 };
 
 .roomEvent {
